# financial-agent-system

./: .gitignore  README.md
docs/: architecture.md  env.md  instructions.md  overview.md  rubric.md
docs/diagrams/: agent_query_workflow.md  database_schema.md  high_level_architecture.md  tool_interaction.md
memory/: brainstorm.md  critical_tasks.md  progress.md  tasks.md
project/: .gitignore  README.md
project/starter_code/: README.md  financial_agent_walkthrough.ipynb  progress.md  pyproject.toml  tasks.md
project/starter_code/data/: financial.db
project/starter_code/helper_modules/: agent_coordinator.py  document_tools.py  function_tools.py
project/starter_code/tests/: test_document_tools.py  test_function_tools.py
