[project]
name = "finance-agent"
version = "0.1.0"
description = "Financial Agent with Multi-Tool Coordination"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.6.1",
    "llama-index>=0.10.0",
    "llama-index-llms-openai>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "pandas>=2.1.4",
    "numpy>=1.24.3",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"